--- a/generator/templates/album_template.html
+++ b/generator/templates/album_template.html
@@ -39,7 +39,7 @@ div.desc {
 {{ $descLen := len $photo.Description}}
 <div class="img">
   <a target="_blank" href="/photos/{{$photo.LocalPath}}">
-    <img src="/photos/minis/{{$photo.LocalPath}}" alt="{{if gt $descLen  0}}{{$photo.Description}}{{else}}{{$photo.LocalPath}}{{end}}" >
+    <img src="/photos/minis/{{$photo.LocalPath}}" alt="{{if gt $descLen  0}}{{$photo.Description}}{{else}}{{$photo.LocalPath}}{{end}} {{$photo.Time}}" >
   </a>
   <div class="desc">{{$photo.Description}}{{$photo.LocalPath}}</div>
 </div>
