--- a/generator/templates/galleria_template.html
+++ b/generator/templates/galleria_template.html
@@ -1,4 +1,6 @@
 <html>
+    <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+
     <head>
         <meta charset="utf-8">
         <title>Galleria Classic Theme</title>
