--- a/generator/templates/galleria_template.html
+++ b/generator/templates/galleria_template.html
@@ -24,6 +24,7 @@
 	<body>
 
 		<button id="btn">See photos</button>
+		<a href="/browse">Back/Retour/Inicio</a>
 
 		<!-- Root element of PhotoSwipe. Must have class pswp. -->
 		<div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
